--- a/index.html
+++ b/index.html
@@ -3,6 +3,34 @@
    <head>
       <script data-ad-client="ca-pub-9198126899172468" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Basic -->
+<meta charset="UTF-8" />
+<meta name="theme-color" content="#09f" />
+<meta
+   name="description"
+   content="Design Engineering Canvas make a online , free of cost service , save your money"
+   />
+<meta
+   name="keywords"
+   content="design engineering Canvas, Design Engineering Canvas, de canvas, AEIOU canvas, de canvas make online, de, design engineering, de canvas maker online"
+   />
+<meta name="mobile-web-app-capable" content="yes" />
+<meta name="author" content="Pipaliya Jaydip" />
+<meta name="copyright" content="Pipaliya Jaydip" />
+<meta name="robots" content="follow" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="design engineering canvas maker" />
+<meta
+   property="og:url"
+   content="https://pipaliyajaydip.github.io/canvas/"
+   />
+<meta
+   property="og:description"
+   content="now , Design Engineering Canvas make easy, simple goto your browser and make Canvases and save as pdf on your phone and computer and upload it Website"
+   />
+<meta property="og:site_name" content="Design Engineering Canvas Online" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:creator" content="@Pipliyajaydip" />
       <title>Canvas Maker</title>
       <style>
          @media only screen and (max-width:700px) {
