--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+      <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
       <script data-ad-client="ca-pub-9198126899172468" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="google-site-verification" content="yGrFOrglCZwGk0_Hb_sNlYdnE4pI8yHVf175J4wgHV0" />
