--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a id="a" href="">Home</a>
             <a id="a" href="">Canvases</a>
             <a id="a" href="">Help</a>
-            <a id="a" href="about.html">About Us</a>
+            <a id="a" href="https://www.linkedin.com/in/pipaliyajaydip">About Us</a>
          </div>
       </header>
       <br>
