--- a/Empathy/empathy.html
+++ b/Empathy/empathy.html
@@ -14,6 +14,14 @@
          }catch(e){}
       </script>
       <title>Empathy Canvas</title>
+      <style>
+      @media print {
+             textarea{
+                 font-family: "Courier New";
+                 font-size: 10pt;
+             }
+         }
+               </style>
    </head>
    <body>
       <div id="sidebar">
