--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
       <br>
       <main>
       <div class="container">
+         <a href="AEIOU/aeiou.html" target="_blank">
          <div>
             <h2><a href="AEIOU/aeiou.html" target="_blank">AEIOU</a></h2>
          </div>
+            </a>
          <div>
             <h2><a href="Empathy/empathy.html" target="_blank" >Empathy</a></h2>
          </div>
