--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 <meta name="twitter:creator" content="@Pipliyajaydip" />
       <title>Canvas Maker</title>
       <style>
+           .click{
+        display: block;
+        
+        padding: 20px;
+        text-align: center;
+      }
          @media only screen and (max-width:700px) {
          [class*="container"] {
          width: 100%;}
@@ -104,7 +110,7 @@
       <br>
       <main>
       <div class="container">
-         <a href="AEIOU/aeiou.html" target="_blank">
+         <a class="click" href="AEIOU/aeiou.html" target="_blank">
          <div>
             <h2><a href="AEIOU/aeiou.html" target="_blank">AEIOU</a></h2>
          </div>
