--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
       <style>
          .click {
         position: absolute;
-        width: 100%;
-        height: 100%;
+       height: 100px;
         top: 0;
         left: 0;
         z-index: 1;
