robot and metatag updated

--- a/index.html
+++ b/index.html
@@ -2,32 +2,49 @@
 <html lang="en">
 
 <head>
-   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
-   <link rel="stylesheet" href="style.css">
-   <script data-ad-client="ca-pub-9198126899172468" async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   <title>Design Engineering Canvas Maker</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="google-site-verification" content="yGrFOrglCZwGk0_Hb_sNlYdnE4pI8yHVf175J4wgHV0" />
-   <!-- Basic -->
    <meta charset="UTF-8" />
    <meta name="theme-color" content="#09f" />
    <meta name="description"
-      content="Design Engineering Canvas make a online , free of cost service , save your money" />
+      content="Design Engineering Canvas provides an easy, free, and online tool to create and save design engineering canvases in PDF format, all at no cost." />
    <meta name="keywords"
-      content="design engineering Canvas, Design Engineering Canvas, de canvas, AEIOU canvas, de canvas make online, de, design engineering, de canvas maker online" />
+      content="design engineering canvas, online canvas maker, free canvas maker, AEIOU canvas, PDF canvas generator, de canvas tool" />
    <meta name="mobile-web-app-capable" content="yes" />
-   <meta name="author" content="Pipaliya Jaydip" />
-   <meta name="copyright" content="Pipaliya Jaydip" />
-   <meta name="robots" content="follow" />
+   <meta name="author" content="Jaydip Pipaliya" />
+   <meta name="copyright" content="Jaydip Pipaliya" />
    <meta property="og:type" content="website" />
-   <meta property="og:title" content="design engineering canvas maker" />
+   <meta property="og:title" content="Design Engineering Canvas Maker" />
    <meta property="og:url" content="https://pipaliyajaydip.github.io/canvas/" />
    <meta property="og:description"
-      content="now , Design Engineering Canvas make easy, simple goto your browser and make Canvases and save as pdf on your phone and computer and upload it Website" />
+      content="Create design engineering canvases easily with the online tool. Save your work as a PDF and upload it to your website!" />
    <meta property="og:site_name" content="Design Engineering Canvas Online" />
    <meta name="twitter:card" content="summary_large_image" />
    <meta name="twitter:creator" content="@Pipliyajaydip" />
-   <title>Canvas Maker</title>
+   <meta name="twitter:title" content="Design Engineering Canvas Maker" />
+   <meta name="twitter:description"
+      content="Create and save your design engineering canvases with this free and simple online tool." />
+   <meta name="twitter:image" content="URL_to_image_for_twitter" /> <!-- Add image URL for Twitter sharing -->
+   <meta name="robots" content="index, follow" />
+   <meta name="googlebot" content="index, follow" />
+
+   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+   <link rel="stylesheet" href="style.css">
+   <link rel="sitemap" type="application/xml" href="https://pipaliyajaydip.github.io/canvas/sitemap.xml" />
+   
+   <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "Design Engineering Canvas Maker",
+        "url": "https://pipaliyajaydip.github.io/canvas/",
+        "description": "Create and save design engineering canvases with this free online tool.",
+        "author": {
+          "@type": "Person",
+          "name": "Pipaliya Jaydip"
+        }
+      }
+   </script>
 </head>
 
 <body>
@@ -62,10 +79,10 @@
       </div>
    </main>
    <footer>
-         <br>
-         <hr>
-         <p>Save Papers, Save Trees</p>
-         <p>Go Green</p>
+      <br>
+      <hr>
+      <p>Save Papers, Save Trees</p>
+      <p>Go Green</p>
    </footer>
 </body>
 
