robot and metatag updated

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
          <div onclick="window.open('Empathy/empathy.html', '_blank');">
             <h2>Empathy</h2>
          </div>
-         <div onclick="window.open('Ideation/ideationcanvas.html', '_blank');">
+         <div onclick="window.open('ideation/ideationcanvas.html', '_blank');">
             <h2>Ideation</h2>
          </div>
          <div onclick="window.open('LNM/LNM.html', '_blank');">
             <h2>L.N.M</h2>
          </div>
-         <div onclick="window.open('Product/productdevelopment.html', '_blank');">
+         <div onclick="window.open('product/productdevelopment.html', '_blank');">
             <h2>Product Development</h2>
          </div>
       </div>
